--- a/.github/workflows/readme-github-sync.yml
+++ b/.github/workflows/readme-github-sync.yml
@@ -10,9 +10,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: readmeio/github-readme-sync@v2
+      
+      - uses: readmeio/rdme@7.2.0
         with:
-          readme-oas-key: ${{ secrets.README_OAS_KEY }}
+          rdme: openapi './openapi.yml' --key=${{ secrets.README_API_KEY }} --id=${{ secrets.README_OAS_KEY }}
+        #with:
+        #  readme-oas-key: ${{ secrets.README_OAS_KEY }}
            
           # OPTIONAL CONFIG, use if necessary
-          oas-file-path: './openapi.yml'
-          api-version: 'v1.0.0'
+        #  oas-file-path: './openapi.yml'
+        #  api-version: 'v1.0.0'
