--- a/.github/workflows/readme-github-sync.yml
+++ b/.github/workflows/readme-github-sync.yml
@@ -1,22 +1,45 @@
-name: Sync OAS to ReadMe
-on:
-  push:
-    branches:
-      - master
-      - main
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: readmeio/github-readme-sync@v2
+#name: Sync OAS to ReadMe
+#on:
+#  push:
+#    branches:
+#      - master
+#      - main
+#jobs:
+  #build:
+    #runs-on: ubuntu-latest
+    #steps:
+      #- uses: actions/checkout@v2
+      #- uses: readmeio/github-readme-sync@v2
       
-      - uses: readmeio/rdme@7.2.0
-        with:
-          rdme: openapi './openapi.yml' --key=${{ secrets.README_API_KEY }} --id=${{ secrets.README_OAS_KEY }}
+      #- uses: readmeio/rdme@7.2.0
+        #with:
+        #  rdme: openapi './openapi.yml' --key=${{ secrets.README_API_KEY }} --id=${{ secrets.README_OAS_KEY }}
         #with:
         #  readme-oas-key: ${{ secrets.README_OAS_KEY }}
            
           # OPTIONAL CONFIG, use if necessary
         #  oas-file-path: './openapi.yml'
         #  api-version: 'v1.0.0'
+
+name: Sync OpenAPI definition to ReadMe
+
+# Run workflow for every push to the `main` branch
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  sync:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout this repo
+        uses: actions/checkout@v3
+
+      # Run GitHub Action to sync OpenAPI file at [path-to-file.json]
+      - name: GitHub Action
+        # We recommend specifying a fixed version, i.e. @7.2.0
+        # Docs: https://docs.github.com/actions/using-workflows/workflow-syntax-for-github-actions#example-using-versioned-actions
+        uses: readmeio/rdme@7.2.0
+        with:
+          rdme: openapi './openapi.yml' --key=${{ secrets.README_API_KEY }} --id=${{ secrets.README_OAS_KEY }}
