--- a/.github/workflows/readme-github-sync.yml
+++ b/.github/workflows/readme-github-sync.yml
@@ -30,5 +30,5 @@ jobs:
       - uses: actions/checkout@v3
       - uses: readmeio/rdme@7.2.0
         with:
-            rdme: openapi api_swagger.json --id={secrets.README_API_DEFINITION_ID}
-          #rdme: openapi api_swagger.json --key=${{ secrets.README_API_KEY }} --id=${{ secrets.README_API_DEFINITION_ID }}
+            rdme: openapi api_swagger.json --key=${{ secrets.README_API_KEY }} --id=${{ secrets.README_API_DEFINITION_ID }}
+
