--- a/.github/workflows/readme-github-sync.yml
+++ b/.github/workflows/readme-github-sync.yml
@@ -22,13 +22,14 @@ on:
   push:
     branches:
       - main
+      - master
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: readmeio/rdme@7.2.0
+      - uses: actions/checkout@v2
+      - uses: readmeio/github-readme-sync@v2
         with:
             rdme: openapi api_swagger.json --key=${{ secrets.README_API_KEY }} --id=${{ secrets.README_API_DEFINITION_ID }}
 
