--- a/.github/workflows/readme-github-sync.yml
+++ b/.github/workflows/readme-github-sync.yml
@@ -29,11 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: readmeio/github-readme-sync@v2
+      - uses: readmeio/rdme@7.2.0
         with:
-          readme-oas-key: ${{ secrets.README_API_KEY }}:${{ secrets.API_DEFINITION_ID}}
-          oas-file-path: api_swagger.json
-          api-version: 'v1.0.0'
-        #with:
-          #rdme: openapi api_swagger.json --key=${{ secrets.README_API_KEY }} --id=${{ secrets.API_DEFINITION_ID}}
+          rdme: openapi api_swagger.json --key=${{ secrets.README_API_KEY }} --id=${{ secrets.API_DEFINITION_ID}}
 
