--- a/.github/workflows/readme-github-sync.yml
+++ b/.github/workflows/readme-github-sync.yml
@@ -1,35 +1,18 @@
-# name: Sync OAS to ReadMe
-# on:
-#  push:
-#    branches:
-#      - master
-#      - main
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v2
-#       - uses: readmeio/github-readme-sync@v2
-      
-#       - uses: readmeio/rdme@7.2.0
-#         with:
-#           rdme: openapi ../api_swagger.json --key=${{ secrets.README_API_KEY }} --id=${{ secrets.API_DEFINITION_ID}}
-
-# name: Sync to ReadMe
-
-# only sync to ReadMe on push to `main` branch
+name: Sync OAS to ReadMe
 on:
   push:
     branches:
-      - main
       - master
-
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-#       - uses: actions/checkout@v2
-      - uses: readmeio/rdme@7.2.0
+      - uses: actions/checkout@v2
+      - uses: readmeio/github-readme-sync@v2
         with:
-          rdme: openapi path/to/file.json --key=${{ secrets.README_API_KEY }} --id=${{ secrets.API_DEFINITION_ID}}
-
+          readme-oas-key: ${{ secrets.m }}
+           
+          # OPTIONAL CONFIG, use if necessary
+          # oas-file-path: './swagger.json'
+          # api-version: 'v1.0.0'
